modified code to support spinner

--- a/app/src/main/res/layout/activity_register_doctor.xml
+++ b/app/src/main/res/layout/activity_register_doctor.xml
@@ -95,10 +95,12 @@
                         android:maxLines="1" />
 
 
+
                     <Spinner
                         android:id="@+id/Doctime"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:hint="@string/app_name"/>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputEmail"
