--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -14,14 +14,14 @@
         android:padding="15dp">
 
         <TextView
+            android:id="@+id/UserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/UserName"
+            android:padding="10dp"
             android:text="Name"
-            android:textStyle="bold"
-            android:textSize="25sp"
             android:textColor="#000"
-            android:padding="10dp"/>
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
@@ -42,6 +42,31 @@
             android:textColor="#000"
             android:layout_below="@+id/UserEmail"
             android:padding="10dp"/>
+
+        <LinearLayout
+            android:layout_below="@+id/UserPhone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+            <Button
+                android:layout_width="173dp"
+                android:layout_height="wrap_content"
+                android:text="Edit"
+                android:layout_marginRight="5dp"
+                android:id="@+id/btnEdit"/>
+
+            <Button
+                android:layout_width="173dp"
+                android:layout_height="wrap_content"
+                android:text="Delete"
+                android:layout_marginLeft="5dp"
+                android:id="@+id/btnDelete"/>
+
+
+        </LinearLayout>
+
+
+
 
     </RelativeLayout>
 
