--- a/app/src/main/res/layout/doctor_item.xml
+++ b/app/src/main/res/layout/doctor_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -48,6 +47,16 @@
             android:layout_below="@+id/DoctType"
             android:padding="10dp"
             android:text="Doctor Time"
+            android:textColor="#000"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/DocSpecification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/DoctTime"
+            android:padding="10dp"
+            android:text="Doctor Specialisation"
             android:textColor="#000"
             android:textSize="25sp" />
 
