--- a/app/src/main/res/layout/doctor_item.xml
+++ b/app/src/main/res/layout/doctor_item.xml
@@ -60,5 +60,25 @@
             android:textColor="#000"
             android:textSize="25sp" />
 
+        <LinearLayout
+            android:layout_below="@+id/DocSpecification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+        <Button
+            android:layout_width="173dp"
+            android:layout_height="wrap_content"
+            android:text="Edit"
+            android:layout_marginRight="5dp"
+            android:id="@+id/btnEdit"/>
+
+        <Button
+            android:layout_width="173dp"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            android:layout_marginLeft="5dp"
+            android:id="@+id/btnDelete"/>
+        </LinearLayout>
+
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
