--- a/app/src/main/res/layout/activity_doctor_data.xml
+++ b/app/src/main/res/layout/activity_doctor_data.xml
@@ -4,20 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/register_bk_color"
     tools:context=".activity_doctor_data">
-
 
 
         <androidx.recyclerview.widget.RecyclerView
 
             android:id="@+id/rv_doctor"
-            android:layout_width="409dp"
-            android:layout_height="729dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="1dp"
-            android:layout_marginTop="100dp"
             android:layout_marginEnd="1dp"
-            android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
