--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -100,20 +100,31 @@
                 android:textStyle="bold" />
 
 
-            <Button
-                android:id="@+id/Admin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="322dp"
-                android:layout_marginBottom="683dp"
-                android:text="Admin" />
-
             <LinearLayout
+                android:id="@+id/buttonsLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:gravity="center"
-                android:weightSum="12" />
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                >
+
+                <Button
+                    android:id="@+id/Admin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Admin" />
+
+                <Button
+                    android:id="@+id/Hospital"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="40dp"
+                    android:layout_gravity="right"
+                    android:text="Hospital" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
@@ -135,15 +146,5 @@
         android:layout_marginBottom="30dp"
         android:onClick="onLoginClick"
         android:src="@drawable/ic_add_img" />
-
-    <Button
-        android:id="@+id/Hospital"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="681dp"
-        android:text="Hospital" />
 
 </RelativeLayout>
