--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/linearLayout3"
                     android:layout_width="match_parent"
-                    android:layout_height="636dp"
+                    android:layout_height="match_parent"
                     android:layout_margin="10dp"
                     android:orientation="vertical">
 
@@ -44,35 +44,34 @@
                         android:id="@+id/imageView2"
                         android:layout_width="135dp"
                         android:layout_height="144dp"
-                        android:layout_marginBottom="476dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintBottom_toTopOf="@+id/imageView4"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.922"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/ic_doctors1" />
 
                     <ImageView
                         android:id="@+id/imageView4"
                         android:layout_width="135dp"
                         android:layout_height="144dp"
-                        android:layout_marginBottom="236dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.055"
+                        app:layout_constraintBottom_toTopOf="@+id/imageView3"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                         app:srcCompat="@drawable/ic_hospitals1" />
 
                     <Button
                         android:id="@+id/buttonhosp"
                         style="@style/loginButton"
-                        android:layout_width="178dp"
+                        android:layout_width="0dp"
                         android:layout_height="52dp"
-                        android:layout_marginStart="147dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:text="Hospitals"
                         app:initialCornerAngle="27dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/imageView4"
+                        app:layout_constraintTop_toTopOf="@+id/imageView4"
                         app:spinning_bar_color="#FFF"
                         app:spinning_bar_padding="6dp"
                         app:spinning_bar_width="4dp" />
@@ -81,11 +80,10 @@
                         android:id="@+id/imageView3"
                         android:layout_width="135dp"
                         android:layout_height="144dp"
-                        android:layout_marginStart="200dp"
+                        android:layout_marginTop="8dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.926"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView4"
                         app:srcCompat="@drawable/ic_users1" />
 
                     <Button
@@ -93,13 +91,14 @@
                         style="@style/loginButton"
                         android:layout_width="178dp"
                         android:layout_height="52dp"
-                        android:layout_marginEnd="176dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:text="Users"
                         app:initialCornerAngle="27dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.869"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/imageView3"
                         app:spinning_bar_color="#FFF"
                         app:spinning_bar_padding="6dp"
                         app:spinning_bar_width="4dp" />
@@ -107,15 +106,16 @@
                     <Button
                         android:id="@+id/buttonup"
                         style="@style/loginButton"
-                        android:layout_width="178dp"
+                        android:layout_width="0dp"
                         android:layout_height="52dp"
-                        android:layout_marginBottom="528dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
                         android:text="Doctors"
                         app:initialCornerAngle="27dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.124"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/imageView2"
                         app:spinning_bar_color="#FFF"
                         app:spinning_bar_padding="6dp"
                         app:spinning_bar_width="4dp" />
