--- a/app/src/main/res/layout/activity_admin_hospital_data.xml
+++ b/app/src/main/res/layout/activity_admin_hospital_data.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminHospitalData">
+    tools:context=".AdminHospitalData"
+    android:background="@color/register_bk_color">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ahrv"
