--- a/app/src/main/res/layout/adminhos_item.xml
+++ b/app/src/main/res/layout/adminhos_item.xml
@@ -1,118 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="6dp"
     android:elevation="6dp"
+    android:layout_margin="8dp"
     app:cardUseCompatPadding="true">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp">
+        android:layout_height="match_parent">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/AHosName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
             android:text="Name"
+            android:textColor="#000"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="#000"
-            android:padding="10dp"
-            />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline5"
+            app:layout_constraintBottom_toTopOf="@+id/AHosNumber" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/AHosEmail"
-            android:text="Email"
-            android:textSize="20sp"
-            android:textColor="#000"
-            android:padding="10dp"
-            android:layout_below="@+id/AHosName" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/AHosNumber"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
             android:text="Number"
-            android:textSize="20sp"
             android:textColor="#000"
-            android:padding="10dp"
-            android:layout_below="@+id/AHosEmail" />
-
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@+id/AHosName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline5"
+            app:layout_constraintBottom_toTopOf="@+id/AHosCity" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/AHosAddress"
-            android:text="Address"
-            android:textSize="20sp"
-            android:textColor="#000"
-            android:padding="10dp"
-            android:layout_below="@+id/AHosNumber" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/AHosCity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
             android:text="City"
-            android:textSize="20sp"
             android:textColor="#000"
-            android:padding="10dp"
-            android:layout_below="@+id/AHosAddress" />
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/AHosEmail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline5"
+            app:layout_constraintTop_toBottomOf="@+id/AHosNumber" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/AHosEmail"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/AHosBeds"
-            android:text="Beds"
-            android:textSize="20sp"
-            android:textColor="#000"
             android:padding="10dp"
-            android:layout_below="@+id/AHosCity" />
+            android:text="Email"
+            android:textColor="#000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/AHosCylinder"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline5"
+            app:layout_constraintTop_toBottomOf="@+id/AHosCity" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/AHosCylinder"
-            android:text="Cylinders"
-            android:textSize="20sp"
-            android:textColor="#000"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:padding="10dp"
-            android:layout_below="@+id/AHosBeds" />
+            android:text="Cylinders"
+            android:textColor="#000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/AHosBeds"
+            app:layout_constraintStart_toStartOf="@+id/guideline5"
+            app:layout_constraintTop_toBottomOf="@+id/AHosEmail" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/AHosBeds"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/AHosBB"
-            android:text="BloodBank"
-            android:textSize="20sp"
-            android:textColor="#000"
             android:padding="10dp"
-            android:layout_below="@+id/AHosCylinder" />
+            android:text="Beds"
+            android:textColor="#000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/AHosAddress"
+            app:layout_constraintStart_toStartOf="@+id/guideline5"
+            app:layout_constraintTop_toBottomOf="@+id/AHosCylinder" />
+
+        <TextView
+            android:id="@+id/AHosAddress"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Address"
+            android:textColor="#000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/AHosBB"
+            app:layout_constraintStart_toStartOf="@+id/guideline5"
+            app:layout_constraintTop_toBottomOf="@+id/AHosBeds" />
+
+        <TextView
+            android:id="@+id/AHosBB"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="BloodBank"
+            android:textColor="#000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
+            app:layout_constraintStart_toStartOf="@+id/guideline5"
+            app:layout_constraintTop_toBottomOf="@+id/AHosAddress" />
 
         <LinearLayout
-            android:layout_below="@+id/AHosBB"
+            android:id="@+id/linearLayout6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-        <Button
-            android:layout_width="173dp"
-            android:layout_height="wrap_content"
-            android:text="Edit"
-            android:layout_marginRight="5dp"
-            android:id="@+id/btnEdit"/>
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/AHosBB">
 
-        <Button
-            android:layout_width="173dp"
-            android:layout_height="wrap_content"
-            android:text="Delete"
-            android:layout_marginLeft="5dp"
-            android:id="@+id/btnDelete"/>
+            <Button
+                android:id="@+id/btnEdit"
+                android:layout_width="173dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="Edit" />
+
+            <Button
+                android:id="@+id/btnDelete"
+                android:layout_width="173dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="Delete" />
         </LinearLayout>
-    </RelativeLayout>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.3" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/AHosNumber"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/AHosNumber" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/AHosName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/AHosNumber" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/AHosName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/AHosName" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/AHosEmail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/AHosCity" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/AHosCylinder"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/AHosCylinder" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/AHosBeds"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/AHosBeds" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/AHosAddress"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/AHosAddress" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/AHosBB"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/AHosBB" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
