done all issue with layout and text

--- a/app/src/main/res/layout/adminhos_item.xml
+++ b/app/src/main/res/layout/adminhos_item.xml
@@ -165,7 +165,7 @@
             android:id="@+id/textView8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Phone No."
             app:layout_constraintBottom_toBottomOf="@+id/AHosName"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.0"
@@ -187,7 +187,7 @@
             android:id="@+id/textView10"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Email"
             app:layout_constraintBottom_toBottomOf="@+id/AHosEmail"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.0"
@@ -198,7 +198,7 @@
             android:id="@+id/textView11"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Cylinder"
             app:layout_constraintBottom_toBottomOf="@+id/AHosCylinder"
             app:layout_constraintEnd_toStartOf="@+id/AHosCylinder"
             app:layout_constraintHorizontal_bias="0.0"
@@ -209,7 +209,7 @@
             android:id="@+id/textView12"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Beds"
             app:layout_constraintBottom_toBottomOf="@+id/AHosBeds"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.0"
@@ -220,7 +220,7 @@
             android:id="@+id/textView13"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Address"
             app:layout_constraintBottom_toBottomOf="@+id/AHosAddress"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.0"
@@ -231,7 +231,7 @@
             android:id="@+id/textView14"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Blood Bank"
             app:layout_constraintBottom_toBottomOf="@+id/AHosBB"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.0"
