--- a/app/src/main/res/layout/activity_doctor_data.xml
+++ b/app/src/main/res/layout/activity_doctor_data.xml
@@ -20,4 +20,16 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="InvalidId" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            android:clickable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:backgroundTint="#FF8400"
+            app:srcCompat="@drawable/add_new" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
